--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h1 {
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 300;
 }
 
 .signature {
